[package]
name = "engine"
version = "0.0.9"
edition = "2024"

[dependencies]


# https://crates.io/crates/windows
[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_OpenGL"
] }
windows-core = "0.62.2"
