[package]
name = "engine"
version = "0.0.101"
edition = "2024"

[dependencies]
colored = "3.0.0"
chrono = "0.4.42"
num-traits = "0.2.19"

# https://crates.io/crates/windows
[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_OpenGL",
    "Win32_System_SystemServices",
] }
windows-core = "0.62.2"
glcore-rs = "0.3.3"
